[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amaos"
version = "0.1.0"
description = "AMAOS - Advanced Multi-Agent Orchestration System"
readme = "README.md"
authors = [
    {name = "AMAOS Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0.0",
    "redis>=4.5.1",
    "prometheus-client>=0.16.0",
    "httpx>=0.24.0",
    "typing-extensions>=4.5.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.0.262",
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-generativeai>=0.2.0",
    "ollama>=0.1.0",
]

memory = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
]

[tool.setuptools]
packages = ["amaos"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.poetry.dev-dependencies]
freezegun = "^1.4.0"
pytest-timeout = "^2.1.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
mypy = "^1.5.0"
